tests/NormalTests/paczka1/fuzzy1/17136557.err
Error in line 2: ozcB37JTZ A112 0,3
Error in line 7: TvrCD A526 70,98
Error in line 6: ozcB37JTZ A488 39,3
Error in line 10: vewiYoagCun A526 18,8
Error in line 12: ozcB37JTZ A112 82,4
Error in line 15: ozcB37JTZ S429 19,2
Error in line 19: TvrCD A526 33,3
Error in line 25: TvrCD S429 62,6
Error in line 22: FxmfIbHF S429 7,3
Error in line 30: vewiYoagCun A112 30,3
